--- a/index.html
+++ b/index.html
@@ -286,10 +286,12 @@
             </table>`
         }
 
-        let newTableState = init_table(NUM_NEW_BUCKETS, NEW_HEIGHT, "#newCanvas", "#newCanvasHighlight", NEW_BUCKETS_PER_BUCKET_COLUMN);
-        let triedTableState = init_table(NUM_TRIED_BUCKETS, TRIED_HEIGHT, "#triedCanvas", "#triedCanvasHighlight", TRIED_BUCKETS_PER_BUCKET_COLUMN);
+        let newTableState;
+        let triedTableState;
 
         function processGetAddrmanInfo(getaddrmaninfo) {
+          newTableState = init_table(NUM_NEW_BUCKETS, NEW_HEIGHT, "#newCanvas", "#newCanvasHighlight", NEW_BUCKETS_PER_BUCKET_COLUMN);
+          triedTableState = init_table(NUM_TRIED_BUCKETS, TRIED_HEIGHT, "#triedCanvas", "#triedCanvasHighlight", TRIED_BUCKETS_PER_BUCKET_COLUMN);
           for (const entry of getaddrmaninfo.new_table) {
               newTableState.table[entry.bucket * 64 + entry.position] = entry;
               newTableState.tree.add(preprocess(entry));
