--- a/index.html
+++ b/index.html
@@ -307,14 +307,13 @@
 
         document.getElementById('load').onclick = function() {
           var files = document.getElementById('selectFiles').files;
-          console.log(files);
           if (files.length != 1) {
+            console.log("Selected multiple files. Please only select a single file.");
             return false;
           }
 
           var fr = new FileReader();
           fr.onload = function(e) {
-            console.log(e);
             let getaddrmaninfo = JSON.parse(e.target.result);
             processGetAddrmanInfo(getaddrmaninfo);
           }
