--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>addrman-observer</title>
-        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="js/d3.v7.min.js"></script>
         <style type="text/css">
             div#tooltip {
                 position: absolute;
