--- a/index.html
+++ b/index.html
@@ -35,20 +35,19 @@
       Load addrman JSON data
 
       <div class="container text-center">
-        <div class="row row-cols-3">
-          <div class="col">
+        <div class="row row-cols-1 row-cols-md-3">
+          <div class="col my-2">
             <fieldset style="border: 1px dashed black;" class="text-center mb-3 p-4">
               <p class="small my-2">Drag &amp; Drop <br>getaddrmaninfo json dumps</p>
               <input id="selectFiles" class="position-absolute invisible" type="file" accept="application/json" />
               <label class="btn btn-outline-primary" for="selectFiles">Choose JSON file</label>
             </fieldset>
           </div>
-          <div class="col">
+          <div class="col my-2">
             <input type="text" class="form-control" id="url" placeholder="https://..." />
-            <br>
             <button class="btn btn-outline-primary" id="load-url">fetch from URL</button>
           </div>
-          <div class="col">
+          <div class="col my-2">
             <ol class="list-group">
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div>
