--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             <ol class="list-group">
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div>
-                  Sample SigNet Addrman 1
+                  signet sample addrman (720kb)
                 </div>
                 <button class="btn btn-outline-primary" onclick="loadFromURL('https://gist.githubusercontent.com/0xB10C/f2daea14ae0b0c06207a687e8b65202d/raw/befdba56adc0b3ce6cfdb9ceda70d276d5c2b2c3/getaddrmaninfo-signet.json')">load</button>
               </li>
-              <li class="list-group-item d-flex justify-content-between align-items-start disabled">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div>
-                  Sample Addrman 2
+                  mainnet IPv4 and IPv6 sample addrman (10MB)
                 </div>
-                <button class="btn btn-outline-primary disabled">load</button>
+                <button class="btn btn-outline-primary" onclick="loadFromURL('https://gist.githubusercontent.com/0xB10C/f2daea14ae0b0c06207a687e8b65202d/raw/162d56f1cbcabb041c84283abfb12aa7f04bc501/getaddrmaninfo-mainnet.json')">load</button>
               </li>
             </ol>
           </div>
