--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row row-cols-1 row-cols-md-3">
           <div class="col my-2">
             <fieldset style="border: 1px dashed black;" class="text-center mb-3 p-4">
-              <p class="small my-2">Drag &amp; Drop <br>getaddrmaninfo json dumps</p>
+              <p class="small my-2">Drag &amp; Drop <br>getrawaddrman json dumps</p>
               <input id="selectFiles" class="position-absolute invisible" type="file" accept="application/json" />
               <label class="btn btn-outline-primary" for="selectFiles">Choose JSON file</label>
             </fieldset>
