add: link to GitHub

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         addrman-observer
       </a>
+      <a href="https://github.com/0xB10C/addrman-observer">source on GitHub</a>
     </div>
   </nav>
 
