working single-table setup

--- a/www/index.html
+++ b/www/index.html
@@ -77,8 +77,8 @@
   </label>
 
   <div style="position: relative; display:inline-block;">
-    <canvas id="newCanvasHighlight"></canvas>
-    <canvas id="newCanvas"></canvas>
+    <canvas id="canvas_highlight"></canvas>
+    <canvas id="canvas"></canvas>
   </div>
 
   <div id="tooltip"></div>
