--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
           <div class="col my-2">
             <fieldset style="border: 1px dashed black;" class="text-center mb-3 p-4">
               <p class="small my-2">Drag &amp; Drop <br>getrawaddrman json dumps</p>
-              <input id="selectFiles" class="position-absolute invisible" type="file" accept="application/json" />
+              <input id="selectFiles" class="position-absolute invisible" type="file" accept="application/json, application/gzip" />
               <label class="btn btn-outline-primary" for="selectFiles">Choose JSON file</label>
             </fieldset>
           </div>
