add: by source_network color
This also makes sure to only show the networks that we have addresses
from in the tables in the legend.

--- a/www/index.html
+++ b/www/index.html
@@ -92,6 +92,7 @@
               <span id="address-color-legend"></span>
               <select name="color" id="color">
                 <option value="network">by network</option>
+                <option value="source_network">by source network</option>
                 <option value="age">by age</option>
               </select>
             </span>
