add: mouse-over highlight by same services

--- a/www/index.html
+++ b/www/index.html
@@ -81,6 +81,7 @@
                 <option value="same-source">same source</option>
                 <option value="same-address">same address</option>
                 <option value="same-port">same port</option>
+                <option value="same-services">same services</option>
               </select>
             </span>
           </span>
