add: color by services
There is a known issue with services where all service bits are set.
JS can't handle these large numbers with precision and uses 18446744073709552000
where it should be 18446744073709551615..

--- a/www/index.html
+++ b/www/index.html
@@ -95,6 +95,7 @@
                 <option value="network">by network</option>
                 <option value="source_network">by source network</option>
                 <option value="age">by age</option>
+                <option value="services">by services</option>
               </select>
             </span>
           </span>
