add: show & highlight AS and source AS in frontend
With https://github.com/bitcoin/bitcoin/pull/30062, the mapped_as
and source_mapped_as fields are introduced. These are handled here
as optional, since older Bitcoin Core versions might not have them
yet and it might never be merged.

--- a/www/index.html
+++ b/www/index.html
@@ -82,6 +82,8 @@
                 <option value="same-address">same address</option>
                 <option value="same-port">same port</option>
                 <option value="same-services">same services</option>
+                <option value="same-as">same mapped AS (asmap)</option>
+                <option value="same-source-as">same mapped source AS (asmap)</option>
               </select>
             </span>
           </span>
