add: color by "all service flags set"

--- a/www/index.html
+++ b/www/index.html
@@ -98,6 +98,7 @@
                 <option value="source_network">by source network</option>
                 <option value="age">by age</option>
                 <option value="services">by services</option>
+                <option value="all-service-bits">all service bits set</option>
               </select>
             </span>
           </span>
